master/uptimekuma/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuma-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kuma.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: service
      port: 3001
  tls:
    secretName: kuma-tls

---

kind: Service
apiVersion: v1
metadata:
  name: heimdall-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kuma.durp.info
spec:
  type: ExternalName
  externalName: durp.info
